--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:13781",
-      "sslPort": 44397
+      /*"sslPort": 44397*/
     }
   },
   "profiles": {
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5000", /*https://localhost:5001;*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
