--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString":"Data Source=/home/krcs/webdev/dotnetce/backend/MYDB.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
